added List of Programmes and Universities, Schedule by Programmes in View menu, and added comments in the mainwindow

--- a/Timetable Test 1/bin/.gitignore
+++ b/Timetable Test 1/bin/.gitignore
@@ -13,3 +13,7 @@
 /LecturerSchedule.class
 /RoomSchedule$1.class
 /RoomSchedule.class
+/Programmes$1.class
+/Programmes.class
+/RoomUtilization$1.class
+/RoomUtilization.class
